# urban

./: .git-blame-ignore-revs  README.md
sound/: README.sound
sound/snd/modules/: basesolo.xm  blazer.xm  boss.xm  demise.xm  dying.xm  extrem.xm  fett.xm  forge.xm  heavy.xm  looser.xm  madness2.xm  mary.xm  metal.xm  nole.xm  power.xm  rock.xm  slayers.xm  warning.mod
urban-1.5.3/: AUTHORS  ChangeLog  INSTALL  NEWS  aclocal.m4  configure
urban-1.5.3/src/: Makefile.in
urban-1.5.3/src/config/: Makefile.am  Makefile.in  config.cc
urban-1.5.3/src/credits/: credits.cc
urban-1.5.3/src/ctrls/: keyb.cc
urban-1.5.3/src/data/: Makefile.in
urban-1.5.3/src/datfile/: datfile.cc
urban-1.5.3/src/editor/: Makefile.in
urban-1.5.3/src/engine/: Makefile.in  engine.cc
urban-1.5.3/src/font/: Makefile.in
urban-1.5.3/src/gfx/: Makefile.am  ggidrv.cc
urban-1.5.3/src/include/: Makefile.in  ai.h  allegro.h  cheat.h  config.h  datfile.h  death.h  editor.h  engine.h  game.h  icache.h  keyinfo.h  map.h  menu.h  sort.h
urban-1.5.3/src/objects/: arnold.cc  barrel.cc  blood.cc  bubble.cc  bubblmak.cc  burning.cc  card.cc  checkp.cc  clugren.cc  compscrn.cc  elevstat.cc  fire.cc  floorgun.cc  frosen.cc  grenade.cc  iceball.cc  object.cc  powerup.cc  (+4 more)
urban-2.0/: CHEAT  ChangeLog  INSTALL.swe  Makefile.am  Makefile.in  README.swe  aclocal.m4  amconfig.h.in  configure  configure.ac
urban-2.0.0/: Makefile.in  README  aclocal.m4  amconfig.h.in  configure  configure.in
urban-2.0.0/src/: Makefile.in
urban-2.0.0/src/engine/: Makefile.am  Makefile.in  engine.cc  game.cc  icache.cc  score.cc
urban-2.0.0/src/objects/: Makefile.am  Makefile.in  airexp.cc  airgren.cc  airstrke.cc  anim.cc  animate.cc  arnold.cc  barrel.cc  bdyparts.cc  beam.cc  blood.cc  bubble.cc  bubblmak.cc  burning.cc  card.cc  checkp.cc  clugren.cc  cluster.cc  compscrn.cc  crycheck.cc  dekor.cc  dolph.cc  door.cc  drgreen.cc  einstein.cc  elevator.cc  elevstat.cc  elevwire.cc  explode.cc  exptile.cc  fire.cc  fireball.cc  floorgun.cc  frosen.cc  gnistor.cc  grenade.cc  hs_bulle.cc  iceball.cc  mine.cc  (+20 more)
urban-2.0/src/: Makefile.am  Makefile.in
urban-2.0/src/config/: Makefile.in  config.cc
urban-2.0/src/credits/: Makefile.am  Makefile.in  credits.cc
urban-2.0/src/ctrls/: Makefile.am  Makefile.in  contrls.cc
urban-2.0/src/data/: Makefile.in
urban-2.0/src/datfile/: Makefile.am  Makefile.in  datfile.cc
urban-2.0/src/editor/: Makefile.am  Makefile.in
urban-2.0/src/engine/: Makefile.in  engine.cc  game.cc  icache.cc  score.cc
urban-2.0/src/font/: Makefile.am  Makefile.in
urban-2.0/src/gfx/: Makefile.in  flc.cc  ggidrv.cc
urban-2.0/src/highscor/: Makefile.in  highscor.cc
urban-2.0/src/include/: Makefile.am  Makefile.in  allegro.h  config.h  ctrls.h  datfile.h  death.h  engine.h  highscor.h  icache.h  intro.h  map.h  object.h  object2.h  outtro.h  scache.h  score.h  sound.h  urbfont.h
urban-2.0/src/intro/: Makefile.am  Makefile.in  intro.cc
urban-2.0/src/map/: Makefile.am  Makefile.in  map.cc
urban-2.0/src/meny/: Makefile.in  meny.cc
urban-2.0/src/objects/: Makefile.in  airexp.cc  airgren.cc  airstrke.cc  anim.cc  animate.cc  arnold.cc  barrel.cc  bdyparts.cc  blood.cc  bubble.cc  bubblmak.cc  burning.cc  card.cc  checkp.cc  clugren.cc  cluster.cc  compscrn.cc  crycheck.cc  dekor.cc  dolph.cc  door.cc  drgreen.cc  einstein.cc  elevator.cc  elevstat.cc  elevwire.cc  explode.cc  exptile.cc  floorgun.cc  frosen.cc  grenade.cc  hs_bulle.cc  mine.cc  missile.cc  plasma.cc  player.cc  points.cc  powerup.cc  rambo.cc  (+13 more)
urban-2.0/src/outtro/: Makefile.in  outtro.cc
urban-2.0/src/sound/: Makefile.in  sound.cc
(+66 files in other folders)
