noinst_LIBRARIES = libobjects.a
libobjects_a_SOURCES = airexp.cc \
	airstrke.cc \
	airgren.cc \
	anim.cc \
	animate.cc \
	arnold.cc \
	barrel.cc \
	beam.cc \
	bdyparts.cc \
	blood.cc \
	bubble.cc \
	bubblmak.cc \
	burning.cc \
	card.cc \
	checkp.cc \
	clugren.cc \
	cluster.cc \
	compscrn.cc \
	crycheck.cc \
	dekor.cc \
	dolph.cc \
	door.cc \
	drgreen.cc \
	einstein.cc \
	elevator.cc \
	elevstat.cc \
	elevwire.cc \
	explode.cc \
	exptile.cc \
	fire.cc \
	fireball.cc \
	floorgun.cc \
	frosen.cc \
	gnistor.cc \
	grenade.cc \
	hs_bulle.cc \
	iceball.cc \
	mine.cc \
	missile.cc \
	object.cc \
	plasma.cc \
	player.cc \
	points.cc \
	powerup.cc \
	rambo.cc \
	rocket.cc \
	science.cc \
	seagal.cc \
	smallexp.cc \
	soldier.cc \
	soldier2.cc \
	soldier3.cc \
	soldier4.cc \
	spy.cc \
	tank.cc \
	tankwhel.cc \
	vaktm.cc \
	water.cc
	
INCLUDES = -I../include
